testsuite/tests/properties/unused_private_props/test.out
test.py:15: error: This private property is unused
test.py:27: error: This private abstraction is unused
Code generation was successful
Done
